fix cursor for safari browser

--- a/packages/editor/editor.css
+++ b/packages/editor/editor.css
@@ -85,7 +85,7 @@
 	overflow: clip;
 }
 
-.tl-container.tl-old-safari {
+.tl-container.tl-safari {
     /* Cursor for old safari versions older than 17.0.0 */
     --tl-cursor-none: none;
     --tl-cursor-default: default;
